# musicli

./: Cargo.toml  expanded.rs
src/lib/: error.rs  lib.rs
src/lib/midi/: file.rs  format.rs  mod.rs  smpte_timecode.rs  timing.rs  track.rs  var_length_value.rs
src/lib/midi/constants/: mod.rs
src/lib/midi/event/: meta_event.rs  midi_event.rs  mod.rs
src/lib/tests/: mod.rs
src/lib/utils/: bounded.rs  from_stream.rs  mod.rs  smpte_timecode.rs  to_stream.rs
src/main/: main.rs  state.rs  structure.rs
src/main/comp/: app.rs  file_search.rs  mod.rs  piano.rs  track_preview.rs  track_view.rs  wrapper.rs
src/main/error/: mod.rs
src/main/utils/: mod.rs
src/main/widgets/: mod.rs  piano.rs  piano_keys.rs  piano_roll.rs
