[package]
name = "musicli"
version = "0.1.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[lib]
name = "musiclib"
path = "src/lib/lib.rs"

[[bin]]
name = "musicli"
path = "src/main/main.rs"

[dependencies]
crossterm = "^0.13"
binread = "^1"
serde = { version = "^1", features = ['derive'] }
serde_yaml = "^0.8"
tui = { version = "^0.6", default-features = false, features = ['crossterm'] }